# DP_Metapopulation

./: .gitignore  LICENSE  Makefile  README.md  metapopulation.py  metrics_update.R  noise_mechanism.py  pipeline.R  pipiline.R  plot_final_metric.R  pyproject.toml
Metrics/: README.txt
Metrics/scr/: metrics_1.R
Metrics/test/: test.R
init/: test.yaml
models/: mobility_ny.yaml  ny_dummy.csv  ny_dummy.ipynb  transitions.yaml
resources/: camber_pop_rescale.csv  nyc_census_data.rds  test_matrices.rds
src/: NY_model.R  calc_camber_rescale.R  camber_etl.R  dependencies.R  final_comp_calc.R  load_matrices.R  metrics.R  metrics_update.R  spatial_seir.R  test.R  utils.R
tests/: test_metapopulation.py
tests/data/activity_day=2021-04-01/: part-00000-82b43639-f95e-4d15-889c-f1c5f70f02d7-c000.snappy.parquet
tests/data/activity_day=2021-04-02/: part-00000-488d2346-3165-45d6-b351-12972c52d51e-c000.snappy.parquet
tests/data/activity_day=2021-04-05/: part-00000-aeb1748b-5c0f-4622-9d35-f7b1be03be81-c000.snappy.parquet
tests/data/activity_day=2021-04-06/: part-00000-c745574c-c1a1-4265-937d-55fccc5b87c2-c000.snappy.parquet
tests/data/activity_day=2021-04-07/: part-00000-3b2b9141-da16-4966-929a-496542ca0a31-c000.snappy.parquet
tests/data/activity_day=2021-04-08/: part-00000-c66a0aa3-2c4d-4d51-8946-e5dcd6af88fe-c000.snappy.parquet
tests/data/activity_day=2021-04-09/: part-00000-f9d9a216-a3d4-4164-900b-e065ff705631-c000.snappy.parquet
tests/data/activity_day=2021-04-10/: part-00000-a6d30fc8-e8c2-42d2-93d0-b415edbedb45-c000.snappy.parquet
(+3 files in other folders)
