[tool.poetry]
name = "dp_metapopulation"
version = "0.1.0"
description = "The Python interface to the data pipeline for the MP model"
authors = ["Navin Vembar <navin@cambersystems.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opendp-smartnoise-core = "^0.2.2"
pandas = "^1.2.4"
numpy = "^1.20.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
